// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [app.cancel.escape] 1`] = `
{
  "sequence": [
    "app.cancel.escape",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [debug.enable] 1`] = `
{
  "sequence": [
    "debug.enable",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [demo.render-self] 1`] = `
{
  "sequence": [
    "demo.render-self",
  ],
  "snap": {
    "containers": 5,
    "dxErrors": 0,
    "edges": 64,
    "focused": "node:e44",
    "nodes": 44,
    "scale": 0.18,
    "selected": "node:e44",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [detail.less] 1`] = `
{
  "sequence": [
    "detail.less",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 0.83,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [detail.more] 1`] = `
{
  "sequence": [
    "detail.more",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1.2,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [editing.container.create] 1`] = `
{
  "sequence": [
    "editing.container.create",
  ],
  "snap": {
    "containers": 1,
    "dxErrors": 0,
    "edges": 0,
    "focused": "container:c1",
    "nodes": 0,
    "scale": 1,
    "selected": "container:c1",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [editing.node.create] 1`] = `
{
  "sequence": [
    "editing.node.create",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": "node:e1",
    "nodes": 1,
    "scale": 1,
    "selected": "node:e1",
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [graph.create] 1`] = `
{
  "sequence": [
    "graph.create",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [graph.switch.next] 1`] = `
{
  "sequence": [
    "graph.switch.next",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [help.open] 1`] = `
{
  "sequence": [
    "help.open",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [layout.apply.grid] 1`] = `
{
  "sequence": [
    "layout.apply.grid",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [layout.apply.radial] 1`] = `
{
  "sequence": [
    "layout.apply.radial",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [layout.apply.tidy] 1`] = `
{
  "sequence": [
    "layout.apply.tidy",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [modal.close] 1`] = `
{
  "sequence": [
    "modal.close",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [palette.open] 1`] = `
{
  "sequence": [
    "palette.open",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [view.fit.all] 1`] = `
{
  "sequence": [
    "view.fit.all",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [view.zen] 1`] = `
{
  "sequence": [
    "view.zen",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [view.zoom.in] 1`] = `
{
  "sequence": [
    "view.zoom.in",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1.2,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [view.zoom.out] 1`] = `
{
  "sequence": [
    "view.zoom.out",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 0.83,
    "selected": null,
  },
}
`;

exports[`combinatorial action graph > length-1: every auto-runnable command boots and runs > runs [view.zoom.reset] 1`] = `
{
  "sequence": [
    "view.zoom.reset",
  ],
  "snap": {
    "containers": 0,
    "dxErrors": 0,
    "edges": 0,
    "focused": null,
    "nodes": 0,
    "scale": 1,
    "selected": null,
  },
}
`;
